# opengl

./: README.md
Practica_1/: CMakeLists.txt  P_1.kdev4  Readme.txt  file_ply_stl.cc  practica1.cc  user_code.cc  user_code.h
Practica_1/F_PLY/: cubo.ply  tetraedro.ply
